# arduchess

./: README.md
arduchess/: arduchess.hex  arduchess.ino  arduchess.ino-arduboy-promicro-alt-sh1106.hex  arduchess.ino.arduino_leonardo.hex  font.hpp  graphics.hpp  paint.hpp  save.hpp  small_font.hpp  title.hpp  vars.hpp
arduchess/ch2k/: .gitignore  CMakeLists.txt  arduchess_uci.cpp  ch2k.hpp  compete.cpp  gen.cpp  gen_opening_book.cpp  gen_starting_pos.cpp  perft.cpp  test_opening_book.cpp  texel_tuning.cpp
arduchess/ch2k/pgnlib/: PGNGame.cpp  PGNGameCollection.cpp  PGNMove.cpp  PGNParser.cpp  PGNPly.cpp  PGNSquare.cpp
